WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64030
REGRESSION: Incorrect layout at recline-online.com
https://bugs.webkit.org/show_bug.cgi?id=64030
Summary
REGRESSION: Incorrect layout at recline-online.com
nathalielincoln
Reported
2011-07-06 14:12:29 PDT
Safari: ok Firefox: ok IE: ok Opera: ok Mozilla: ok Google Chromium 14.0.812.0 (91475): Fail Message back from Google Chrome: Thanks for the report. Confirmed with Chromium 14.0.812.0 (91475) on Mac OS 10.6.8. But this seems to be Webkit issue, because I can reproduce this with the latest Webkit (90391), too. screen shot a is the desired layout.
Attachments
this is the desired layout
(450.00 KB, application/msword)
2011-07-06 14:13 PDT
,
nathalielincoln
no flags
Details
Screenshot of MSWord document
(176.56 KB, image/png)
2011-07-06 17:13 PDT
,
Simon Fraser (smfr)
no flags
Details
Reduction
(216 bytes, text/html)
2011-07-06 19:31 PDT
,
Dominic Cooney
no flags
Details
Patch
(6.82 KB, patch)
2011-07-12 15:12 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
page looks tiny in google chrome
(208.50 KB, application/msword)
2011-07-13 05:22 PDT
,
nathalielincoln
no flags
Details
example of how it should look
(440.50 KB, application/msword)
2011-07-13 05:22 PDT
,
nathalielincoln
no flags
Details
Patch
(7.26 KB, patch)
2011-07-14 11:04 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
nathalielincoln
Comment 1
2011-07-06 14:13:55 PDT
Created
attachment 99877
[details]
this is the desired layout
Mehmet
Comment 2
2011-07-06 17:00:14 PDT
Broken page:
http://recline-online.com
Chromium Bug:
http://code.google.com/p/chromium/issues/detail?id=88570
Alexey Proskuryakov
Comment 3
2011-07-06 17:10:08 PDT
<
rdar://problem/9734076
>
Simon Fraser (smfr)
Comment 4
2011-07-06 17:12:47 PDT
Why did you attach a screenshot as an MS Word document? PNG please.
Simon Fraser (smfr)
Comment 5
2011-07-06 17:13:51 PDT
Created
attachment 99905
[details]
Screenshot of MSWord document
Simon Fraser (smfr)
Comment 6
2011-07-06 17:15:42 PDT
This is caused by <div align="right">.
Dominic Cooney
Comment 7
2011-07-06 19:31:15 PDT
Created
attachment 99915
[details]
Reduction
Dominic Cooney
Comment 8
2011-07-06 19:33:38 PDT
The layout in Safari 5.0.4 and Firefox 5.0 is the same and matches the "desired" layout (assuming my .doc viewer works :/) The layout in WebKit nightly
r90503
and Chrome 14.0.803.0 (WebKit
r89703
) is the same and differs from the "desired" layout. The "problem" element in the layout is the interaction between the first <div align="right"> and the <table align="left"> child. The reduction in
attachment 99915
[details]
makes this clearer. The align="left" causes the table to float out of the div. In Safari 5.0.4 and Firefox 5.0, the table appears on the left. In WebKit nightly
r90503
the table appears on the right.
Simon Fraser (smfr)
Comment 9
2011-07-06 21:20:52 PDT
Would be good to know when this regressed.
Mehmet
Comment 10
2011-07-07 11:33:44 PDT
(In reply to
comment #9
)
> Would be good to know when this regressed.
Simon, I checked the older builds. The regression range is between
r68242
and
r68419
. Regards Mehmet
Robert Hogan
Comment 11
2011-07-11 14:12:46 PDT
git bisect says it's :
http://trac.webkit.org/changeset/68362
Robert Hogan
Comment 12
2011-07-12 15:12:20 PDT
Created
attachment 100574
[details]
Patch
nathalielincoln
Comment 13
2011-07-13 04:10:03 PDT
Hello, I am a bit confused as to what is being communicated - sorry. I have had a look at my layout code and corrected so the content now sits correctly left to right. But for some reason the page looks tiny when compared to how it looks on all other browsers. Can you please advise if this is a bug or again another detail in the code that needs addressing? Many thanks.
Robert Hogan
Comment 14
2011-07-13 04:56:39 PDT
(In reply to
comment #13
)
> Hello, > > I am a bit confused as to what is being communicated - sorry. > > I have had a look at my layout code and corrected so the content now sits correctly left to right. But for some reason the page looks tiny when compared to how it looks on all other browsers. > > Can you please advise if this is a bug or again another detail in the code that needs addressing? > > Many thanks.
Can you attach the offending page to this bug?
nathalielincoln
Comment 15
2011-07-13 05:22:01 PDT
Created
attachment 100661
[details]
page looks tiny in google chrome
nathalielincoln
Comment 16
2011-07-13 05:22:41 PDT
Created
attachment 100662
[details]
example of how it should look
Simon Fraser (smfr)
Comment 17
2011-07-13 08:15:39 PDT
Screenshots in MS Word make me sad. Why not just attach image files?
Robert Hogan
Comment 18
2011-07-13 14:24:04 PDT
The size is normal for me in both unpatched Chromium and patch QtTestBrowser. By normal, I mean the same as Firefox 4 and Opera. I am testing
http://recline-online.com/
. If the code you see the problem with is not live, you should attach it to a new bug I think. If there is an issue it sounds like a separate one.
Dominic Cooney
Comment 19
2011-07-13 16:16:19 PDT
Also works for me in Chrome 14.0.814.0 (Official Build 91661) dev Mac WebKit 535.1 (trunk@90501). Nathalie: Check in Chrome that Wrench → Zoom is 100% and not something smaller.
Robert Hogan
Comment 20
2011-07-14 11:04:22 PDT
Created
attachment 100830
[details]
Patch
nathalielincoln
Comment 21
2011-07-14 11:17:05 PDT
The page looks great in google chrome now. Many thanks all.
Dave Hyatt
Comment 22
2011-07-18 14:37:04 PDT
Comment on
attachment 100830
[details]
Patch Yeah, this looks correct to me. I just lost a bit of code.
WebKit Review Bot
Comment 23
2011-07-19 11:40:39 PDT
Comment on
attachment 100830
[details]
Patch Clearing flags on attachment: 100830 Committed
r91277
: <
http://trac.webkit.org/changeset/91277
>
WebKit Review Bot
Comment 24
2011-07-19 11:40:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug