REGRESSION: Incorrect layout at recline-online.com https://bugs.webkit.org/show_bug.cgi?id=64030

Reviewed by David Hyatt.

Source/WebCore:

http://trac.webkit.org/changeset/68362 dropped the check for cases
where the render box is floating or inline. When the box is left or right
aligned it is considered to be floating and needs to its margins set appropriately.

Test: fast/table/align-right-within-left-aligned-div.html
      created by Dominic Cooney <dominicc@chromium.org>

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeInlineDirectionMargins):

LayoutTests:

* fast/table/align-right-within-left-aligned-div-expected.png: Added.
* fast/table/align-right-within-left-aligned-div-expected.txt: Added.
* fast/table/align-right-within-left-aligned-div.html: Added.


Canonical link: https://commits.webkit.org/80522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91277 268f45cc-cd09-0410-ab3c-d52691b4dbfc